--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 ---
-name: Unified CI Pipeline
+name: CI
 on:
   push:
     paths:
@@ -15,7 +15,7 @@ on:
       - "biome.json"
       - "xz-version.json"
       # Workflow files themselves
-      - ".github/workflows/ci-unified.yml"
+      - ".github/workflows/ci.yml"
       # Exclude documentation and non-critical files
       - "!**/*.md"
       - "!docs/**"
@@ -28,8 +28,6 @@ on:
     branches:
       - master
       - "releases/**"
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9]+"
   pull_request:
     paths:
       - "src/**"
