--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,113 +1,43 @@
 name: Release
 
 on:
-  push:
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
+  workflow_dispatch:
+    inputs:
+      increment:
+        description: 'Semver increment (patch, minor, major)'
+        type: choice
+        required: true
+        default: patch
+        options:
+          - patch
+          - minor
+          - major
 
 permissions:
   contents: write
   id-token: write
+  actions: read
+
+concurrency:
+  group: release-${{ github.ref_name }}
+  cancel-in-progress: false
 
 env:
   NODE_VERSION: '22'
-  NODE_OPTIONS: '--max-old-space-size=4096'
 
 jobs:
-  check-ci:
-    name: Verify CI Passed
+  build-artifacts:
+    uses: ./.github/workflows/build-artifacts.yml
+    with:
+      upload-artifacts: true
+    secrets: inherit
+
+  release:
     runs-on: ubuntu-latest
+    name: Create Release
+    needs: build-artifacts
     outputs:
-      ci-passed: ${{ steps.check.outputs.passed }}
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Check CI status for commit
-        id: check
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const sha = context.sha;
-            const { data: checkRuns } = await github.rest.checks.listForRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: sha,
-              per_page: 100
-            });
-
-            const ciRuns = checkRuns.check_runs.filter(run =>
-              run.name.includes('CI') || run.name.includes('Test') || run.name.includes('Quality')
-            );
-
-            const failedRuns = ciRuns.filter(run => run.conclusion !== 'success');
-
-            if (failedRuns.length > 0) {
-              core.setFailed(
-                `CI checks failed or pending:\n${failedRuns.map(r => `- ${r.name}: ${r.conclusion}`).join('\n')}`
-              );
-              core.setOutput('passed', 'false');
-            } else {
-              core.setOutput('passed', 'true');
-            }
-
-  build-prebuilds:
-    name: Build Prebuilds
-    needs: check-ci
-    if: needs.check-ci.outputs.ci-passed == 'true'
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        node: [16, 18, 20, 22]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v5
-        with:
-          node-version: ${{ matrix.node }}
-          cache: 'pnpm'
-
-      - name: Cache XZ sources
-        uses: actions/cache@v4
-        with:
-          path: |
-            deps/xz
-            deps/xz.tar.gz
-          key: release-${{ runner.os }}-node${{ matrix.node }}-xz-${{ hashFiles('scripts/download_xz_from_github.py', 'xz-version.json') }}
-          restore-keys: |
-            release-${{ runner.os }}-node${{ matrix.node }}-xz-
-            release-${{ runner.os }}-xz-
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build prebuild
-        run: pnpm prebuildify
-        if: matrix.os != 'windows-latest'
-
-      - name: Build prebuild (Windows)
-        run: pnpm prebuildify:win
-        if: matrix.os == 'windows-latest'
-        shell: cmd
-
-      - name: Upload prebuilds
-        uses: actions/upload-artifact@v4
-        with:
-          name: prebuilds-${{ matrix.os }}-node${{ matrix.node }}
-          path: prebuilds/
-
-  publish:
-    name: Publish to npm
-    needs: build-prebuilds
-    runs-on: ubuntu-latest
+      tag: ${{ steps.capture-tag.outputs.value }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -129,69 +59,57 @@ jobs:
           path: |
             deps/xz
             deps/xz.tar.gz
-          key: release-publish-xz-${{ hashFiles('scripts/download_xz_from_github.py', 'xz-version.json') }}
+          key: release-xz-${{ hashFiles('scripts/download_xz_from_github.py', 'xz-version.json') }}
           restore-keys: |
-            release-publish-xz-
+            release-xz-
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Download all prebuilds
+      - name: Download prebuilds artifacts
         uses: actions/download-artifact@v4
         with:
+          pattern: prebuilds-*
           path: prebuilds-temp/
+          merge-multiple: true
 
       - name: Merge prebuilds
         run: |
           mkdir -p prebuilds
           find prebuilds-temp -type f -name '*.node' -exec cp {} prebuilds/ \;
+          echo "✅ Prebuilds merged:"
+          ls -lh prebuilds/
 
-      - name: Build TypeScript
-        run: pnpm build
-
-      - name: Publish to npm
-        run: pnpm publish --access public --provenance
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-  github-release:
-    name: Create GitHub Release
-    needs: publish
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v5
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'pnpm'
-
-      - name: Extract version from tag
-        id: version
-        run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
-
-      - name: Extract changelog for version
-        id: changelog
+      - name: Configure Git
         run: |
-          VERSION=${{ steps.version.outputs.version }}
-          CHANGELOG=$(sed -n "/## \[${VERSION}\]/,/## \[/p" CHANGELOG.md | sed '$d')
-          echo "changelog<<EOF" >> $GITHUB_OUTPUT
-          echo "$CHANGELOG" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          body: ${{ steps.changelog.outputs.changelog }}
-          draft: false
-          prerelease: false
+      - name: Update CHANGELOG
+        run: pnpm release-it-preset update
+
+      - name: Validate release (dry-run)
+        run: pnpm release-it-preset default --dry-run --increment ${{ github.event.inputs.increment }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Run release-it
+        run: pnpm release-it-preset default --ci --increment ${{ github.event.inputs.increment }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Capture release tag
+        id: capture-tag
+        run: echo "value=$(git describe --tags --abbrev=0)" >> "$GITHUB_OUTPUT"
+
+      - name: Summarize
+        run: |
+          echo "## 🎉 Release Created" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Tag**: ${{ steps.capture-tag.outputs.value }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Increment**: ${{ github.event.inputs.increment }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "✅ Tag created and pushed" >> $GITHUB_STEP_SUMMARY
+          echo "✅ publish.yml will now build and publish automatically" >> $GITHUB_STEP_SUMMARY
