--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "3.2.4",
     "nano-staged": "^0.8.0",
+    "prebuildify": "^6.0.1",
     "release-it": "^19.0.5",
     "simple-git-hooks": "^2.13.1",
     "tsd": "^0.33.0",
