fix(workflows): add tag normalization and fix checkout refs for reproducible builds

--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -52,6 +52,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
+          ref: ${{ needs.normalize-tag.outputs.tag }}
           submodules: recursive
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
