--- a/.github/workflows/check-xz-updates.yml
+++ b/.github/workflows/check-xz-updates.yml
@@ -1,7 +1,7 @@
 name: Check XZ Updates
 on:
   schedule:
-    # Every Monday at 3 AM UTC
+    # Every Monday at 3 AM UTC (checks for updates + refreshes artifact)
     - cron: '0 3 * * 1'
   workflow_dispatch:
     inputs:
@@ -9,6 +9,11 @@ on:
         description: 'Create PR if new version found'
         required: false
         default: true
+        type: boolean
+      force_artifact:
+        description: 'Force artifact upload even without new version'
+        required: false
+        default: false
         type: boolean
 
 permissions:
@@ -28,22 +33,22 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-      
+
       - name: Check for new XZ version
         id: check
         run: |
           # Get current version from config
           CURRENT=$(jq -r '.version' xz-version.json)
           echo "Current XZ version: $CURRENT"
-          
+
           # Get latest version from GitHub API
           LATEST=$(curl -s https://api.github.com/repos/tukaani-project/xz/releases/latest | jq -r '.tag_name')
           echo "Latest XZ version: $LATEST"
-          
+
           # Set outputs
           echo "current=$CURRENT" >> $GITHUB_OUTPUT
           echo "latest=$LATEST" >> $GITHUB_OUTPUT
-          
+
           if [ "$CURRENT" != "$LATEST" ]; then
             echo "new_version=true" >> $GITHUB_OUTPUT
             echo "🆕 New XZ version available: $LATEST (current: $CURRENT)"
@@ -51,18 +56,18 @@ jobs:
             echo "new_version=false" >> $GITHUB_OUTPUT
             echo "✅ Already on latest version: $LATEST"
           fi
-      
+
       - name: Setup pnpm
         if: steps.check.outputs.new_version == 'true'
         uses: pnpm/action-setup@v4
-      
+
       - name: Setup Node.js
         if: steps.check.outputs.new_version == 'true'
         uses: actions/setup-node@v5
         with:
           node-version: 20
           cache: 'pnpm'
-      
+
       - name: Test with latest XZ version
         if: steps.check.outputs.new_version == 'true'
         id: test
@@ -82,7 +87,25 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         continue-on-error: true
-      
+
+      - name: Download XZ sources for artifact
+        if: steps.check.outputs.new_version == 'true' && steps.test.outputs.test_passed == 'true'
+        run: |
+          # Download XZ sources using the Python script
+          python3 scripts/download_xz_from_github.py deps/xz-artifact.tar.gz deps/xz-artifact/
+          echo "✅ XZ sources downloaded for artifact upload"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload XZ sources as artifact
+        if: steps.check.outputs.new_version == 'true' && steps.test.outputs.test_passed == 'true'
+        uses: actions/upload-artifact@v4
+        with:
+          name: xz-source-${{ steps.check.outputs.latest }}
+          path: deps/xz-artifact/
+          retention-days: 90
+          compression-level: 9
+
       - name: Update xz-version.json
         if: steps.check.outputs.new_version == 'true' && steps.test.outputs.test_passed == 'true' && (github.event.inputs.create_pr == 'true' || github.event_name == 'schedule')
         run: |
@@ -91,9 +114,9 @@ jobs:
              --arg date "$(date -I)" \
              '.version = $version | .last_checked = $date | .comment = "Stable version tested and validated for production. Auto-updated by GitHub Actions."' \
              xz-version.json > tmp.json && mv tmp.json xz-version.json
-          
+
           echo "Updated xz-version.json to ${{ steps.check.outputs.latest }}"
-      
+
       - name: Create Pull Request
         if: steps.check.outputs.new_version == 'true' && steps.test.outputs.test_passed == 'true' && (github.event.inputs.create_pr == 'true' || github.event_name == 'schedule')
         uses: peter-evans/create-pull-request@v6
@@ -103,25 +126,25 @@ jobs:
           title: "🆙 Update XZ Utils to ${{ steps.check.outputs.latest }}"
           body: |
             ## XZ Utils Update Available
-            
+
             A new version of XZ Utils is available and has been tested successfully.
-            
+
             - **Current version**: `${{ steps.check.outputs.current }}`
             - **New version**: `${{ steps.check.outputs.latest }}`
-            
+
             ### Changes
             - Updated `xz-version.json` to use XZ ${{ steps.check.outputs.latest }}
             - Automated tests passed successfully
-            
+
             ### Release Notes
             [View release notes for ${{ steps.check.outputs.latest }}](https://github.com/tukaani-project/xz/releases/tag/${{ steps.check.outputs.latest }})
-            
+
             ### Testing
-            ✅ Installation test passed  
-            ✅ Build test passed  
-            ✅ Type check passed  
-            ✅ Unit tests passed  
-            
+            ✅ Installation test passed
+            ✅ Build test passed
+            ✅ Type check passed
+            ✅ Unit tests passed
+
             ---
             🤖 This PR was created automatically by the XZ update checker workflow.
           branch: update-xz-${{ steps.check.outputs.latest }}
@@ -129,7 +152,7 @@ jobs:
             enhancement
             dependencies
             automated
-      
+
       - name: Create issue on test failure
         if: steps.check.outputs.new_version == 'true' && steps.test.outputs.test_passed != 'true'
         uses: actions/github-script@v7
@@ -140,31 +163,32 @@ jobs:
               repo: context.repo.repo,
               title: `❌ XZ ${{ steps.check.outputs.latest }} Update Failed`,
               body: `A new version of XZ Utils is available but the automated tests failed.
-              
+
               - **Current version**: \`${{ steps.check.outputs.current }}\`
               - **New version**: \`${{ steps.check.outputs.latest }}\`
-              
+
               The automated tests failed, so this update requires manual review.
-              
+
               [View release notes](${{ github.server_url }}/tukaani-project/xz/releases/tag/${{ steps.check.outputs.latest }})
               [View failed workflow](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
-              
+
               Please investigate the compatibility issues before updating manually.`,
               labels: ['bug', 'dependencies', 'needs-investigation']
             })
-      
+
       - name: Create summary
         if: always()
         run: |
           echo "## XZ Update Check Summary" >> $GITHUB_STEP_SUMMARY
           echo "- Current version: ${{ steps.check.outputs.current }}" >> $GITHUB_STEP_SUMMARY
           echo "- Latest version: ${{ steps.check.outputs.latest }}" >> $GITHUB_STEP_SUMMARY
-          
+
           if [ "${{ steps.check.outputs.new_version }}" == "true" ]; then
             echo "- Status: 🆕 Update available" >> $GITHUB_STEP_SUMMARY
             if [ "${{ steps.test.outputs.test_passed }}" == "true" ]; then
               echo "- Tests: ✅ Passed" >> $GITHUB_STEP_SUMMARY
               echo "- Action: PR created for update" >> $GITHUB_STEP_SUMMARY
+              echo "- Artifact: ✅ XZ sources uploaded" >> $GITHUB_STEP_SUMMARY
             else
               echo "- Tests: ❌ Failed" >> $GITHUB_STEP_SUMMARY
               echo "- Action: Issue created for manual review" >> $GITHUB_STEP_SUMMARY
@@ -173,3 +197,39 @@ jobs:
             echo "- Status: ✅ Up to date" >> $GITHUB_STEP_SUMMARY
             echo "- Action: No action needed" >> $GITHUB_STEP_SUMMARY
           fi
+
+  refresh-artifact:
+    name: Refresh XZ artifact
+    runs-on: ubuntu-latest
+    needs: check-updates
+    if: |
+      (github.event_name == 'schedule') ||
+      (github.event.inputs.force_artifact == 'true') ||
+      (needs.check-updates.outputs.has_update == 'false' && github.event_name == 'workflow_dispatch')
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download XZ sources
+        run: |
+          VERSION=$(jq -r '.version' xz-version.json)
+          echo "Downloading XZ $VERSION for artifact refresh"
+          python3 scripts/download_xz_from_github.py deps/xz.tar.gz deps/xz/
+          echo "✅ XZ sources downloaded"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload XZ sources as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: xz-source-${{ needs.check-updates.outputs.current_version }}
+          path: deps/xz/
+          retention-days: 90
+          compression-level: 9
+
+      - name: Summary
+        run: |
+          echo "## Artifact Refresh Summary" >> $GITHUB_STEP_SUMMARY
+          echo "- Version: ${{ needs.check-updates.outputs.current_version }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Status: ✅ Artifact refreshed" >> $GITHUB_STEP_SUMMARY
+          echo "- Retention: 90 days" >> $GITHUB_STEP_SUMMARY
