feat(ci): optimize XZ source management with artifacts and fix prebuildify PATH

--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -142,6 +142,7 @@ jobs:
           USE_GLOBAL: false
           RUNTIME_LINK: static
           ENABLE_THREAD_SUPPORT: yes
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload prebuild artifacts
         uses: actions/upload-artifact@v4
         with:
