--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "build": "tsc",
     "build:watch": "tsc --watch",
     "prepare": "simple-git-hooks && pnpm run build",
-    "prebuildify": "pnpm exec prebuildify --napi --strip -t $(node -v)",
-    "prebuildify:win": "for /f \"usebackq tokens=*\" %v in (`node -v`) do pnpm exec prebuildify -t %v --napi --strip",
+    "prebuildify": "prebuildify --napi --strip -t $(node -v)",
+    "prebuildify:win": "for /f \"usebackq tokens=*\" %v in (`node -v`) do prebuildify -t %v --napi --strip",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --config vitest.config.monocart.ts --coverage",
@@ -47,7 +47,6 @@
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "3.2.4",
     "nano-staged": "^0.8.0",
-    "prebuildify": "^6.0.1",
     "release-it": "^19.0.5",
     "simple-git-hooks": "^2.13.1",
     "tsd": "^0.33.0",
