--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     }
   },
   "scripts": {
-    "install": "node-gyp-build",
+    "postinstall": "node-gyp-build",
     "build": "tsc",
     "build:watch": "tsc --watch",
     "prepare": "simple-git-hooks && pnpm run build",
