fix(ci): force bash shell for XZ download step on Windows

--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -93,6 +93,7 @@ jobs:
 
       - name: Download XZ from artifact or fallback
         if: steps.xz-cache.outputs.cache-hit != 'true'
+        shell: bash
         run: |
           set -e
           VERSION=$(jq -r '.version' xz-version.json)
