--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -58,6 +58,7 @@ jobs:
         with:
           languages: ${{ matrix.language }}
           queries: +security-extended,security-and-quality
+          config-file: ./.github/codeql/codeql-config.yml
 
       - name: Install dependencies and build (JavaScript)
         if: matrix.language == 'javascript'
