--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "exports": {
     ".": {
       "import": "./lib/lzma.js",
-      "types": "./index.d.ts"
+      "types": "./index.d.ts",
+      "default": "./lib/lzma.js"
     }
   },
   "scripts": {
