--- a/.github/workflows/check-xz-updates.yml
+++ b/.github/workflows/check-xz-updates.yml
@@ -88,6 +88,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           XZ_VERSION: ${{ steps.check.outputs.latest }}
           USE_GLOBAL: 'false'
+          RUNTIME_LINK: 'static'
         continue-on-error: true
 
       - name: Download XZ sources for artifact
