fix(ci): add ENABLE_THREAD_SUPPORT for XZ from-source builds
The CMake build script requires all three environment variables to be
explicitly set: USE_GLOBAL, RUNTIME_LINK, and ENABLE_THREAD_SUPPORT.

--- a/.github/workflows/check-xz-updates.yml
+++ b/.github/workflows/check-xz-updates.yml
@@ -89,6 +89,7 @@ jobs:
           XZ_VERSION: ${{ steps.check.outputs.latest }}
           USE_GLOBAL: 'false'
           RUNTIME_LINK: 'static'
+          ENABLE_THREAD_SUPPORT: 'yes'
         continue-on-error: true
 
       - name: Download XZ sources for artifact
