refactor(build): use sensible defaults for build env vars
The CMake build script now uses the same defaults as binding.gyp:
- RUNTIME_LINK: 'shared' on Linux/macOS, 'static' on Windows
- ENABLE_THREAD_SUPPORT: 'yes'
- USE_GLOBAL: 'true' on Linux/macOS, 'false' on Windows

This removes the need to explicitly set all environment variables
when building. The check-xz-updates workflow now only sets
USE_GLOBAL=false to force building from source.

--- a/.github/workflows/check-xz-updates.yml
+++ b/.github/workflows/check-xz-updates.yml
@@ -87,9 +87,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           XZ_VERSION: ${{ steps.check.outputs.latest }}
-          USE_GLOBAL: 'false'
-          RUNTIME_LINK: 'static'
-          ENABLE_THREAD_SUPPORT: 'yes'
+          USE_GLOBAL: 'false'  # Force build from source to test new XZ version
         continue-on-error: true
 
       - name: Download XZ sources for artifact
